integration_tests/codegen_fail/fail/scalar/derive_input/impl_without_resolvers.rs
use juniper::graphql_scalar;

#[graphql_scalar]
struct Scalar;

fn main() {}
